--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 			      </svg>
     			 </a>
    				</span></h1>
-				<h3>Actress</h3>
+				<h3>Actress | Model</h3>
 				
 			</div>
 			<div id="nav">
